Fixing click detection on 1.20 to 1.21.7.